@@ -97,6 +97,10 @@ Java Changes
 - Fixed an IceSSL bug in which the IceSSL.Alias property was not
   working correctly.
 
+- Java classes and structs types, now define a serialVersionUID 
+  member, users can  override the default generated value using 
+  metadata [java:serialVersionUID:<value>]
+
 Python Changes
 ==============
 
